// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Factory  > Factory will create instance and collect metadata 1`] = `
[
  {
    "controller": "http",
    "ctxs": [
      "context",
    ],
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/base",
      "route": "/test",
      "type": "get",
    },
    "interceptors": [],
    "name": "A",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "A",
  },
]
`;

exports[`Factory  > In extended case 1`] = `
[
  {
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
]
`;

exports[`Factory  > multple class extends the same class 1`] = `
[
  {
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test2",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testB",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/B",
      "route": "/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "B",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "B",
  },
  {
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test3",
    "guards": [],
    "http": {
      "prefix": "/C",
      "route": "/testC",
      "type": "get",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
  {
    "controller": "http",
    "ctxs": undefined,
    "define": {},
    "filter": undefined,
    "func": "test",
    "guards": [],
    "http": {
      "prefix": "/C",
      "route": "/testA",
      "type": "get",
    },
    "interceptors": [],
    "name": "C",
    "params": [
      {
        "define": {},
        "index": 0,
        "key": "id",
        "pipe": undefined,
        "type": "query",
      },
      {
        "define": {},
        "index": 1,
        "key": "name",
        "pipe": undefined,
        "type": "body",
      },
    ],
    "plugins": [],
    "tag": "C",
  },
]
`;
